Gutenberg: Avoid horizontal scrollbar on small screens.
Props kjellr.
See #3703.



git-svn-id: https://meta.svn.wordpress.org/sites/trunk@7542 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/gutenberg/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/gutenberg/style.css
@@ -966,6 +966,10 @@ object {
 	visibility: hidden;
 }
 
+.gutenberg__editor .editor-block-list__layout {
+	overflow-x: hidden;
+}
+
 .media-frame-uploader,
 .media-router {
 	display: none;
